# OpenGL_Triange

./: CMakeLists.txt  README.md  testWin.bat
include/: shaderProgram.hpp
include/glad/: glad.h
shaders/: simplevs.glsl
src/: glad.c  main.cpp  shaderProgram.cpp
